--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,6 +25,16 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+
+        # storing the artifact that has been built
+      - name: store artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files #artifact name
+          # where this file will be stored, second path is just to show multiple paths so is redundaant
+          path: |
+            dist
+            dist.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
