--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,6 +9,13 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
+      - name: cache
+        uses: actions/cache@v3
+        with:
+          path: ˜/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json')}}
+
       - name: Install dependencies
         run: npm ci
       - name: Lint code
@@ -23,6 +30,13 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
+      - name: cache
+        uses: actions/cache@v3
+        with:
+          path: ˜/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json')}}
+
       - name: Install dependencies
         run: npm ci
 
