--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -34,7 +34,7 @@ jobs:
       - name: cache
         uses: actions/cache@v3
         with:
-          path: ˜/.npm
+          path: ~/.npm
           key: node-modules-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
